--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -643,3 +643,50 @@ text-decoration: none;
   font-weight: bold;
   color: #555;
 }
+/* --------------------------------------------------- */
+ /* body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 20px;
+    } */
+    .container {
+        max-width: 600px;
+        margin: auto;
+        margin-top: 2rem;
+        background-color: #fbfbfb;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .form-group {
+        margin-bottom: 15px;
+    }
+    label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: bold;
+    }
+    input[type="text"],
+    input[type="number"], 
+    input[type="tel"], 
+    input[type="email"], 
+    input[type="date"] {
+        width: 100%;
+        padding: 8px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+    }
+    input[type="submit"] {
+        background-color: #4caf50;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 100%;
+    }
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
